--- a/package.json
+++ b/package.json
@@ -16,20 +16,15 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-jwt": "^4.0.0",
     "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
-    "react-redux": "^5.0.7",
-    "saslprep": "^1.0.3",
-    "socket.io": "^3.0.3",
-    "supports-color": "^7.1.0"
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
@@ -39,7 +34,7 @@
     "start": "node server/index.js",
     "backend": "nodemon server/index.js",
     "frontend": "npm run start --prefix client",
-		"dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "author": "kdh&khu&ldw",
   "license": "ISC"
